remove fiber, better linting
